[ADD] DarkRP now saves the costs of guns and other global ints
[ADD] Ability to knock on doors you don't own(left/right mouse with the keys weapon)
[ADD] Some citizen models(Now not every citizen has the same model)
[ADD] Teamban and teamunban (chat = /teamban, console = rp_teamban): Ban/unban a player from a certain team. Use: /teamban <player> <team> or rp_teamban <player> <team>
[CHANGE] All door controls are now done though reload with the Keys weapon.
[CHANGE] Descriptions in the change job VGUI(thanks james hutchins)
[CHANGE] The way prop protection works for admins
[CHANGE] Moved the job change to F2 and I added a lot of commands/entities to it
[CHANGE] The way Simple prop protection protects against slider bug: you can make the slider but you won't be able to do anything with the prop you made the slider on.
[CHANGE] Lockpick being able to hit other things than doors
[CHANGE] HasPriv() speed by using a cache: THANKS PHILXYZ
[CHANGE] SpreadFire code: THANKS PHILXYZ
[CHANGE] The way movement is done
[CHANGE] The druglab completely! I hope you like it!
[CHANGE] Put the warrant back.
[CHANGE] Scoreboard now sorts the players on their class
[CHANGE] Replaced bad rating with "friendly" rating
[CHANGE] You can see what you rated someone, and the rated guy can see who rated him.
[FIX] When use protection is on, doors couldn't be opened by some people, now they can.
[FIX] Rare error with dropweapon
[FIX] Exploit with shipments: Exploding them with more than one explosive would make them spawn more guns than usual.
[FIX] Exploit with wire nailer
[FIX] Exploit that you can duplicate weapons(I made sure that you can't use toolgun on weapons AND I made sure you can't spawn saved weapons works on both normal dup and adv. dup)
[FIX] Bug that even if hungermod was off, food would still cost money.
[FIX] Gravgun punt punting far
[FIX] Not being able to use druglabs/money printers/whatever
[FIX] Vote screens being able to be there forever